[gd_scene load_steps=5 format=3 uid="uid://djs5r2dgf3cj3"]

[ext_resource type="Script" path="res://tools/unit_viewer.gd" id="1_2y7qc"]
[ext_resource type="PackedScene" uid="uid://dxsegbop5pwxa" path="res://tools/character_info_panel.tscn" id="1_nex0y"]
[ext_resource type="PackedScene" uid="uid://b0q80qar3n8ho" path="res://tools/unit_type_panel.tscn" id="3_g7s6x"]
[ext_resource type="PackedScene" uid="uid://c3c8en8k23kxo" path="res://scenes/common/key_value_label.tscn" id="4_ha0t1"]

[node name="UnitViewer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_2y7qc")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 2
offset_left = 3.0
offset_top = 3.0
offset_right = 224.0
offset_bottom = 65.0
auto_height = true
item_count = 2
fixed_icon_size = Vector2i(32, 32)
item_0/text = "Alara"
item_1/text = "Cultist - Axe"

[node name="CharacterInfoPanel" parent="." instance=ExtResource("1_nex0y")]
offset_left = 227.0
offset_top = 3.0
offset_right = 596.0
offset_bottom = 90.0

[node name="UnitTypePanel" parent="." instance=ExtResource("3_g7s6x")]
offset_left = 227.0
offset_top = 93.0
offset_right = 596.0
offset_bottom = 392.0

[node name="HideButton" type="Button" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 3.0
offset_right = 631.0
offset_bottom = 36.0
text = "<"

[node name="ShowButton" type="Button" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 34.0
offset_bottom = 36.0
text = ">"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 227.0
offset_top = 414.0
offset_right = 596.0
offset_bottom = 613.0

[node name="IDLabel" parent="VBoxContainer" instance=ExtResource("4_ha0t1")]
unique_name_in_owner = true
layout_mode = 2
key = "ID:"
value = "None"

[node name="CurrentOwnerLabel" parent="VBoxContainer" instance=ExtResource("4_ha0t1")]
unique_name_in_owner = true
layout_mode = 2
key = "Current Owner:"
value = "None"

[node name="StateLabel" parent="VBoxContainer" instance=ExtResource("4_ha0t1")]
unique_name_in_owner = true
layout_mode = 2
key = "State:"
value = "false"

[node name="FieldedLabel" parent="VBoxContainer" instance=ExtResource("4_ha0t1")]
unique_name_in_owner = true
layout_mode = 2
key = "Fielded:"
value = "false"

[node name="SelectableLabel" parent="VBoxContainer" instance=ExtResource("4_ha0t1")]
unique_name_in_owner = true
layout_mode = 2
key = "Selectable:"
value = "false"

[connection signal="item_selected" from="ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="HideButton" to="." method="_on_hide_button_pressed"]
[connection signal="pressed" from="ShowButton" to="." method="_on_show_button_pressed"]
